2005-03-17  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/nsd.h
	* nsd/unix.h
	* nsd/nsmain.h: Added watchdog implementation (RFE #1156875)

2005-03-12  Vlad Seryakov <vlad@crystalballinc.com>

        * nspd/
        * nsext/: moved modules out of the core into modules /section

2005-03-08  Vlad Seryakov <vlad@crystalballinc.com>

	* nslog/nslog.c: as Stephan pointed there is possibility for 
	server to crash under some conditions accessing already freed 
	extheaders pointer. So i put lock before putting extheaders values 
        in the log, in most cases extheaders are empty so there is no overhead.

2005-03-07  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nslog/nslog.c: fixed bad handling of rollfmt arg which
	caused segmetantion if the alternative rollfmt was not
	defined.

2005-03-07  Vlad Seryakov <vlad@crystalballinc.com>

        * include/hs.h:
        * nsd/conn.c: changed return status for Ns_ConnSetResponseStatus
        to void, corrected comments for this function.

2005-03-06  Vlad Seryakov <vlad@crystalballinc.com>

	* nsd/tclmisc.c:
	* nsd/tclcmds.c: added ns_sha1 command.

2005-03-06  Zoran Vasiljevic  <vasiljevic@users.sf.net>

	* nsd/tclxkeylist.c:
	* nsd/tclcmds.c: added objectified version of TclX keyed lists.

2005-03-05  Vlad Seryakov <vlad@crystalballinc.com>

	* nsd/conn.c include/ns.h Add Ns_ConnSetResponseStatus command to
        be able to se response status without touching headers. Also
        ns_conn status has been extended with ability to set response 
        status if third argument is provided. ns_conn status ?newStatus?

        * nslog/nslog.c: changed syntax to conform naviserver style,
        no functional modifications

2005-03-04  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/tclobjv.c: Add support for boolean options which take no
	argument. Truth is determined by presence of the option alone.

2005-03-01  Vlad Seryakov <vlad@crystalballinc.com>

	* nslog/nslog.c: redone options support for the module